fixed missing image bug

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,7 @@
   
 <img class="top" src="/images/river-top-01.png">
 
+<img class="top" src="/images/cover.png">
     <div class="jumbotron text-center">
       <div class="container">
         <h1>
@@ -21,7 +22,7 @@
         Your browser does not support the audio element.
         </audio>
         <a href="feed.xml"> xml feed
-          
+
         </a>
       </div>
     </div>
