--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,3 +1,3 @@
-<title>Node.js Getting Started on Heroku</title>
+<title>Alluvium</title>
 
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
